topic/category add/del ok

--- a/views/home.html
+++ b/views/home.html
@@ -8,13 +8,15 @@
   </div>
 
   <div class="container">
+    {{range .Topics}}
     <div class="page-header">
-      <h1>我的第一篇博客</h1>
-      <h6 class="text-muted">文章发表于 2018 年 x 月 x 日 xx:xx, 共有 100 次浏览， 200 个评论</h6>
+	  <h1><a href="/topic/view/{{.Id}}">{{.Title}}</a></h1>
+      <h6 class="text-muted">文章发表于 {{.Created}}, 共有 {{.Views}} 次浏览， {{.ReplyCount}} 个评论</h6>
       <p>
-        大家好，这是我的第一篇博客！ 
+        {{.Content}}
       </p>    
     </div>
+    {{end}}
   </div>
 
   <script type="text/javascript" src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.js"></script>
