add category for topics

--- a/views/topic.html
+++ b/views/topic.html
@@ -15,6 +15,7 @@
         <tr>
           <th>#</th>
           <th>文章名称</th>
+          <th>文章分类</th>
           <th>最后更新</th>
           <th>浏览</th>
           <th>回复数</th>
@@ -26,6 +27,7 @@
         <tr>
           <th>{{.Id}}</th>
 						<th><a href="/topic/view/{{.Id}}">{{.Title}}</a></th>
+            <th>{{.Category}}</th>
 						<th>{{.Updated}}</th>
 						<th>{{.Views}}</th>
 						<th>{{.ReplyCount}}</th>
