--- a/views/topic_add.html
+++ b/views/topic_add.html
@@ -21,6 +21,11 @@
       </div>
 
       <div class="form-group">
+        <label>文章标签</label>
+        <input type="text" class="form-control" name="label">
+      </div>
+
+      <div class="form-group">
         <label>文章内容</label>
         <textarea name="content" cols="30" rows="10" class="form-control"></textarea>
       </div>
